@@ -174,6 +174,39 @@ class TestURL:
         assert base == url
         assert not (base != url)
 
+    def test_username(self):
+        assert URL('http://example.com').username is None
+        assert URL('http://user@example.com').username == 'user'
+        assert URL('http://user:password@example.com').username == 'user'
+        assert URL('https://example.com:443').username is None
+        assert URL('https://user@example.com:443').username == 'user'
+        assert URL('https://user:password@example.com:443').username == 'user'
+
+    def test_password(self):
+        assert URL('http://example.com').password is None
+        assert URL('http://user@example.com').password is None
+        assert URL('http://user:password@example.com').password == 'password'
+        assert URL('https://example.com:443').password is None
+        assert URL('https://user@example.com:443').password is None
+        assert URL('https://user:password@example.com:443').password == 'password'
+
+    def test_hostname(self):
+        assert URL('http://example.com').hostname == 'example.com'
+        assert URL('http://user@example.com').hostname == 'example.com'
+        assert URL('http://user:password@example.com').hostname == 'example.com'
+        assert URL('https://example.com:443').hostname == 'example.com'
+        assert URL('https://user@example.com:443').hostname == 'example.com'
+        assert URL('https://user:password@example.com:443').hostname == 'example.com'
+
+    def test_port(self):
+        assert URL('http://example.com').port is None
+        assert URL('http://user@example.com').port is None
+        assert URL('http://user:password@example.com').port is None
+        assert URL('https://example.com:443').port == 443
+        assert URL('https://user@example.com:443').port == 443
+        assert URL('https://user:password@example.com:443').port == 443
+
+
 #
 # test torelpath/fromrelpath
 #
