@@ -1,7 +1,8 @@
 3.1.0 (Unreleased)
 ------------------
 
-- add hostname property to URL objects
+- add ``username``, ``password``, ``hostname`` and ``port`` properties to
+  URL objects
 
 - expose SSLError on Session object to allow checking for verification errors
 
